--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@astrojs/alpinejs": "^0.4.3",
+    "@astrojs/react": "^4.2.0",
+    "@tailwindcss/vite": "^4.0.4",
+    "@types/alpinejs": "^3.13.11",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "alpinejs": "^3.14.8",
+    "astro": "^5.2.5",
+    "lucide-react": "^0.475.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.4"
   }
 }
